--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "mongodb": "^6.15.0",
     "next": "15.2.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "styled-components": "^6.1.17"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
